SUBDIRS = \
	common			\
	accessibility	\
	appearance		\
	default-applications	\
	display			\
	keybindings		\
	network			\
	windows

DIST_SUBDIRS = \
	common			\
	accessibility		\
	appearance		\
	default-applications	\
	keybindings		\
	network			\
	windows			\
	display 		\
	about-me


if BUILD_ABOUTME
SUBDIRS += about-me
endif

-include $(top_srcdir)/git.mk
