SUBDIRS = \
	common			\
	accessibility	\
	appearance		\
	default-applications	\
	display			\
	keybindings		\
	windows

DIST_SUBDIRS = \
	common			\
	accessibility		\
	appearance		\
	default-applications	\
	keybindings		\
	windows			\
	display 		\
	about-me


if BUILD_ABOUTME
SUBDIRS += about-me
endif

-include $(top_srcdir)/git.mk
