include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = control-center
DOC_ENTITIES = config-accessibility-keyboard.xml config-background.xml config-behavior.xml config-cds.xml config-default-apps.xml config-file-type.xml config-hints.xml config-html.xml config-kbd.xml config-keybindings.xml config-mouse.xml config-screensaver.xml config-sound.xml config-themes.xml
DOC_INCLUDES = 

DOC_LINGUAS =
